# spacy-pronounce

./: README.md  pyproject.toml
spacy_pronounce/: __init__.py
spacy_pronounce/g2p_en/: g2p.py
spacy_pronounce/g2p_en/data/: contractions.py  homographs.en  multiples.py
