[virtualenvs]
create = false

[tool.poetry]
name = "spacy_pronounce"
version = "0.1.0"
description = "Phoneme annotation pipeline component for spacy"
authors = ["nikitalita <nikitalita@dontemailme.com>"]
homepage = "https://github.com/nikitalita/spacy-pronounce"
repository = "https://github.com/nikitalita/spacy-pronounce"
keywords = ["spacy", "phonemes", "pronunciation"]
license = "MIT"
readme = "README.md"
classifiers=[
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
exclude = ["tests"]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^3.0.3"
pyphen = "^0.10.0"
cmudict = "^0.4.5"
inflect = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
nox = "^2019.11.9"
pylint = "^2.4.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
